tests/undefined/undefined.exp
Error: undefined.js:3
  3:     x.foo();
         ^^^^^^^ call of method `foo`. Method cannot be called on possibly undefined value
  3:     x.foo();
         ^ uninitialized variable

Error: undefined2.js:7
  7:     (name: boolean); // error, string or void
          ^^^^ string. This type is incompatible with
  7:     (name: boolean); // error, string or void
                ^^^^^^^ boolean

Error: undefined2.js:7
  7:     (name: boolean); // error, string or void
          ^^^^ undefined. This type is incompatible with
  7:     (name: boolean); // error, string or void
                ^^^^^^^ boolean

Error: undefined2.js:13
 13:     (bar[x]: boolean); // error, string or void
          ^^^^^^ string. This type is incompatible with
 13:     (bar[x]: boolean); // error, string or void
                  ^^^^^^^ boolean

Error: undefined2.js:13
 13:     (bar[x]: boolean); // error, string or void
          ^^^^^^ undefined. This type is incompatible with
 13:     (bar[x]: boolean); // error, string or void
                  ^^^^^^^ boolean

Error: undefined2.js:22
 22:       x[0]; // should error, could be void
           ^^^^ access of computed property/element. Indexable signature not found in
 22:       x[0]; // should error, could be void
           ^ Number

Error: undefined2.js:29
 29:     (bar[x]: boolean); // error, string only
          ^^^^^^ string. This type is incompatible with
 29:     (bar[x]: boolean); // error, string only
                  ^^^^^^^ boolean


Found 7 errors
